// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it supports snapshot testing 1`] = `
Array [
  Object {
    "text": "Test 4",
  },
]
`;

exports[`it supports snapshot testing with multiple elements 1`] = `
Array [
  Object {
    "text": "Test 1",
  },
  Object {
    "text": "Test 2",
  },
  Object {
    "text": "Test 3 and Test 4",
  },
  Object {
    "text": "Test 4",
  },
]
`;
